# sympiler-eigen

./: CMakeLists.txt  README.md  sympiler_cholesky.cpp
example/: CMakeLists.txt  cholesky_eigen_driver.cpp
includes/: sympiler_cholesky.h
